many nav bar fails,vert buttons,break point navs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,20 @@
-<div style="text-align:center"><h1>Cultural Epicenter</h1></div>
-<nav>
-  <a routerLink="/kiosk1" routerLinkActive="active">Kiosk1</a>
-  <a routerLink="/kiosk2" routerLinkActive="active">Kiosk2</a>
-</nav>
+<div class="container-sm"> <!-- 100% wide until small breakpoint -->
+            
+  
+  
+  
+  
+  
+  
+  <div style="text-align:center"><h1>Cultural Epicenter</h1></div>
+  <nav>
+    <a routerLink="/kiosk1" routerLinkActive="active">Kiosk1</a>
+    <br>
+    <a routerLink="/kiosk2" routerLinkActive="active">Kiosk2</a>
+    <br>
+  </nav>
 
+</div>
 
 <router-outlet></router-outlet>
 
