--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,5 @@
-/* Master Styles */
-h1 {
-    color:#700202; 
-    font-family: Arial, Helvetica, sans-serif;   
-    font-size: 100%;
-  }
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-
-  /* Navigation link styles */
-  nav a {
-    padding: 5px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #eee;
-    border-radius: 4px;
-  }
-  nav a:visited, a:link {
-    color: rgb(61, 97, 116);
-  }
-  nav a:hover {
-    color: #044eaf;
-    background-color: #CFD8DC;
-  }
-  nav a.active {
-    color: #700202;
-  }
+body {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
