buttons on the slide menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
 <mat-drawer-container class="container" autosize>
     <mat-drawer #drawer class="sidenav">
-          <p>Menu</p>
+          <button routerLink="/customers">Customers</button>
+          <button routerLink="/orders">Orders</button>
+          <button routerLink="/messages">Messages</button>
     </mat-drawer>
     <div class="sidenav-content">
         <button mat-icon-button (click)="drawer.toggle()">
             <mat-icon> menu </mat-icon>
         </button>
+<router-outlet></router-outlet>        
     </div>
 </mat-drawer-container>
 
 
-<router-outlet></router-outlet>
+
 
