--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -1,1 +1,21 @@
-<p>customer-list works!</p>
+<p>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+customer-list works!
+<br>
+
+</p>
