--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,18 @@
 .container {
     position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:0px;
 }
-
 .container .mat-drawer {
     min-width: 200px;
+}
+.container .mat-drawer .mat-button {
+    display: block;
+    width: 100%;
+    text-align: left;
+}
+.spacer{
+    flex: 1px 1px auto;
 }
