FINALLY! THE ROUTER WORKS NOW! lazy load child routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                     <mat-icon>menu</mat-icon>
                 </button> 
                 
-                <span>Cultural Epicenter</span>
+                <span><p>Cultural Epicenter</p></span>
                 <span class='spacer'></span>
                 <mat-icon>favorite</mat-icon>
             </mat-toolbar-row>
