revamp, 18 comp, 6 mod w/o conventional names,routing mods only

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <mat-drawer-container class="container" autosize>
     <mat-drawer #drawer class="sidenav">
-          <button color="primary" mat-button routerLink="/customers">Customers</button>
-          <button color="primary" mat-button routerLink="/orders">Orders</button>
-          <button color="primary" mat-button routerLink="/messages">Messages</button>
+                
+                <button color="primary" mat-button routerLink="/entertainment">Entertainment</button>
+                <button color="primary" mat-button routerLink="/libraries">Libraries</button>
+                <button color="primary" mat-button routerLink="/lifestyles">Lifestyles</button>
+                <button color="primary" mat-button routerLink="/resources">Resources</button>
+
+
     </mat-drawer>
+    
     <div class="sidenav-content">
         <mat-toolbar color="primary">
             <mat-toolbar-row>
