--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,14 +6,184 @@
     bottom:0px;
 }
 .container .mat-drawer {
-    min-width: 100px;
+    min-width: 200px;
 }
 .container .mat-drawer .mat-button {
     display: block;
     width: 200%;
-    text-align: left;
+    text-align: left; 
 }
 .spacer{
     flex: 1px 1px auto;
 }
+/* /////////// animated background */
+#back {
+    background: url(http://www.tranexnet.com/img/back.png) repeat 20% 20%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.4;
+    z-index: -1;
+    -webkit-animation-name: backgroundAnimate;
+    -webkit-animation-duration: 500s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-name: backgroundAnimate;
+    -moz-animation-duration: 5s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+    -o-animation-name: backgroundAnimate;
+    -o-animation-duration: 500s;
+    -o-animation-timing-function: linear;
+    -o-animation-iteration-count: infinite;
+    animation-name: backgroundAnimate;
+    animation-duration: 500s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+#front {
+    background: url(http://www.tranexnet.com/img/front.png) repeat 35% 35%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.6;
+    z-index: -1;
+    -webkit-animation-name: backgroundAnimate;
+    -webkit-animation-duration: 300s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-name: backgroundAnimate;
+    -moz-animation-duration: 300s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+    -o-animation-name: backgroundAnimate;
+    -o-animation-duration: 300s;
+    -o-animation-timing-function: linear;
+    -o-animation-iteration-count: infinite;
+    animation-name: backgroundAnimate;
+    animation-duration: 300s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+/* ////////// Menu B */
+  .dropbtn1 {
+    background-color:rgb(36, 54, 104);
+    color: white;
+    padding: 3px;
+    font-size: 16px;
+    border: none;
+  }
+  /* .dropdown1 {
+    position: relative;
+    display: inline-block;
 
+  }*/
+  .dropdown-content1 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content1 a {
+    color: black;
+    padding: 3px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content1 a:hover {background-color: #ddd;}
+  .dropdown1:hover .dropdown-content1 {display: block;}
+  .dropdown1:hover .dropbtn1 {background-color: #3e8e41;}
+  /* ////////// */
+  .dropbtn2 {
+    background-color: rgb(25, 45, 100);
+    color: white;
+    padding: 3px;
+    font-size: 16px;
+    border: none;
+  }
+  /* .dropdown2 {
+    position: relative;
+    display: inline-block;
+  } */
+  .dropdown-content2 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content2 a {
+    color: black;
+    padding: 3px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content2 a:hover {background-color: #ddd;}
+  .dropdown2:hover .dropdown-content2 {display: block;}
+  .dropdown2:hover .dropbtn2 {background-color: #3e8e41;}
+  /* ////////// */
+  .dropbtn3 {
+    background-color: rgb(25, 45, 100);
+    color: white;
+    padding: 3px;
+    font-size: 16px;
+    border: none;
+  }
+  /* .dropdown3 {
+    position: relative;
+    display: inline-block;
+  } */
+  .dropdown-content3 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content3 a {
+    color: black;
+    padding: 3px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content3 a:hover {background-color: #ddd;}
+  .dropdown3:hover .dropdown-content3 {display: block;}
+  .dropdown3:hover .dropbtn3 {background-color: #3e8e41;}
+  /* ////////// */
+  .dropbtn4 {
+    background-color: rgb(36, 54, 104);
+    color: white;
+    padding: 3px;
+    font-size: 16px;
+    border: none;
+  }
+  /* .dropdown4 {
+    position: relative;
+    display: inline-block;
+  } */
+  .dropdown-content4 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    
+  }
+  .dropdown-content4 a {
+    color: black;
+    padding: 3px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content4 a:hover {background-color: #ddd;}
+  .dropdown4:hover .dropdown-content4 {display: block;}
+  .dropdown4:hover .dropbtn4 {background-color: #3e8e41;}
